# ir-team-exercise

./: .gitignore  mkdocs.yml  pyproject.toml  requirements.txt  run.py
configs/: config.yaml
notebooks/: exploratory.ipynb  pell_accepts.ipynb  team_exercise.ipynb
scripts/: build_venv.sh
src/ir_pell_accepts/: headcount_calcs.py  io_utils.py  output.py  tables_for_carol.py
src/ir_pell_accepts.egg-info/: PKG-INFO
src/ir_team_exercise/: checks.py  clean.py  config_path.py  headcount_calcs.py  helper.py  io_utils.py  tables_for_carol.py
